# rmpyutils

./: .gitignore  README.md  pyproject.toml
rmpyutils/: anon.py  loganon.py  plt.py
rmpyutils/scripts/: install_loganon.py  install_sitecustomize.py  sitecustomize.py  uninstall_sitecustomize.py
test/: cmaptest.py  singlhisttest.py  test_anon.py  test_loganon.py
