[project]
name = "rmpyutils"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Ronak Mehta", email = "ronakrm@gmail.com" }
]
dependencies = [
    "numpy>=2.1.1",
    "matplotlib>=3.9.2",
    "seaborn>=0.13.2",
]
readme = "README.md"
requires-python = ">= 3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pyqt6>=6.7.1",
    "pytest>=8.3.3",
    "pot>=0.9.4",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["rmpyutils"]

[project.scripts]
rmpyutils_loganon_install = "rmpyutils.scripts.install_sitecustomize:install_sitecustomize"
rmpyutils_loganon_uninstall = "rmpyutils.scripts.uninstall_sitecustomize:uninstall_sitecustomize"

[tool.hatch.build.targets.sdist]
include = [
    "/rmpyutils",
    "/scripts",
]